--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "database:prod": "heroku pg:psql -a YOUR_HEROKU_APP_NAME",
     "seed:prod": "heroku run knex seed:run -a YOUR_HEROKU_APP_NAME",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "reset": "npm run rollback:dev && npm run migrate:dev && npm run seed:dev",
+    "resetdb": "npm run rollback:dev && npm migrate:dev",
+    "seed": "knex seed:run"
   },
   "engines": {
     "node": "16.13.2"
