deploy prep push

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DB_URL=NULL (where URL is the database connection string)
+PORT=5000
+DEV_DATABASE_URL=pending
+TESTING_DATABASE_URL=PENDING
+NODE_ENVIRONMENT=DEVELOPMENT
