--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "migrate:dev": "knex migrate:latest",
     "rollback:dev": "knex migrate:rollback",
     "seed:dev": "knex seed:run",
-    "migrate:prod": "heroku run knex migrate:latest -a bw-fitness-backend",
-    "rollback:prod": "heroku run knex migrate:rollback -a bw-fitness-backend",
-    "database:prod": "heroku pg:psql -a bw-fitness-backend",
-    "seed:prod": "heroku run knex seed:run -a bw-fitness-backend",
+    "migrate:prod": "heroku run knex migrate:latest -a fitness-fulltime",
+    "rollback:prod": "heroku run knex migrate:rollback -a fitness-fulltime",
+    "database:prod": "heroku pg:psql -a fitness-fulltime",
+    "seed:prod": "heroku run knex seed:run -a fitness-fulltime",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main",
     "reset": "npm run rollback:dev && npm run migrate:dev && npm run seed:dev",
